[gd_scene load_steps=7 format=2]

[ext_resource path="res://EndMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Nochmal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Nochmal1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Hauptmenu.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Hauptmenu1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=6]

[node name="EndMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 177.0
margin_top = 80.0
margin_right = 462.0
margin_bottom = 240.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 285.0
margin_bottom = 14.0
text = "Gl√ºckwunsch! Du hast jede Welt gemeistert!"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 18.0
margin_right = 285.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 36.0
margin_right = 285.0
margin_bottom = 50.0

[node name="ReplayGameButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 76.0
margin_top = 54.0
margin_right = 208.0
margin_bottom = 102.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="MainMenuButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 57.0
margin_top = 106.0
margin_right = 227.0
margin_bottom = 160.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 285.0
margin_bottom = 86.0
text = "Spiel beenden"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReplayGameButton" to="." method="_on_ReplayGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
